# pyright-examples

./: README.md  example.py  pyproject.toml  pyrightconfig.json  requirements.txt
app/: tasks.py  tests.py  utils.py  views.py
example/: admin.py  models.py  tests.py
